# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml  sqlx-data.json
.github/workflows/: general.yml  rust.yml
configuration/: production.yaml
scripts/: init_db.ps1  init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
